tests/kubernetes/gpu_test_pod.yaml
# Runs nvidia-smi in a pod to test GPU operator and nvidia runtime are setup correctly
# Run with kubectl apply -f gpu_pod_test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skygputest
spec:
  restartPolicy: Never
  containers:
  - name: skygputest
    image: us-central1-docker.pkg.dev/skypilot-375900/skypilotk8s/skypilot-gpu:latest
    command: ["nvidia-smi"]
    resources:
      limits:
         amd.com/gpu: "1"
